Changes to styling

--- a/src/Pages/Deliverer/Dashboard/dash2/widget/widget1.scss
+++ b/src/Pages/Deliverer/Dashboard/dash2/widget/widget1.scss
@@ -44,6 +44,11 @@
         }
       }
   
-     
+      .icon {
+        font-size: 18px;
+        padding: 5px;
+        border-radius: 5px;
+        align-self: flex-end;
+      }
     }
   }
