--- a/src/Pages/Deliverer/Dashboard/dash2/chart/chart1.scss
+++ b/src/Pages/Deliverer/Dashboard/dash2/chart/chart1.scss
@@ -14,10 +14,11 @@
     cursor: pointer;
   }
 
-  .recharts-cartesian-axis-tick {
-    fill: black;
+  
+  .recharts-tooltip-wrapper {
+    background-color: #f59e0b;
+    border: none;
+    color: black;
     cursor: pointer;
   }
-
- 
 }
