styling the features

--- a/src/Pages/Deliverer/Dashboard/dash2/chart/chart1.scss
+++ b/src/Pages/Deliverer/Dashboard/dash2/chart/chart1.scss
@@ -14,7 +14,11 @@
     cursor: pointer;
   }
 
-  
+  .recharts-cartesian-axis-tick {
+    fill: black;
+    cursor: pointer;
+  }
+
   .recharts-tooltip-wrapper {
     background-color: #f59e0b;
     border: none;
